# musicgen

./: LICENSE.txt  pyproject.toml  requirements.txt
data/train/class_labels/: entertainer.txt  frelise.txt
data/train/target_mubins/: entertainer.mbin  frelise.mbin  g_minor_bach.mbin  gymnopedie.mbin  passacaglia.mbin
data/train/textprompts/: entertainer.txt  frelise.txt  g_minor_bach.txt  gymnopedie.txt  passacaglia.txt
src/muclip_rbermani/: MuCLIP.py  config.py  loader.py  modules.py
src/mut/: README.md  __init__.py  config.py  dataset.py  mutclass.py  train.py  utils.py
src/mutransformer/: config.py  dataset.py  model.py  train.py  utils.py
src/tokenizers_rbermani/: mubin_tokenizer.py
tests/: conftest.py  data.py  main.py  test_music_tokenizer.py  test_mutransformer_dataset.py
